--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "cd"
+    "test": "cd",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
