--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "node server.js",
+    "test": "cd",
   },
   "author": "",
   "license": "ISC",
